data/derived/fa15/progs/unify/prog3632.ml.out
Characters 80-100:
  | _ -> [bigAdd [l] [(mulByDigit (i-1) l)]];;
                      ^^^^^^^^^^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
